# random_numbers_samples

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  Doxyfile
.claude/: settings.json
src/: custom_imconfig.h  file_io.h  glfw_include.h  histogram.h  main.cpp  plot.h  random_data_table.h  random_numbers.h  random_samples.h  rect4.h  script.cpp  transform.h
